feat: add MacOs support